testdata/baselines/reference/compiler/tluaNumericForErrors.errors.txt
tluaNumericForErrors.tlua(2,10): error TS6133: 'badBounds' is declared but its value is never read.
tluaNumericForErrors.tlua(3,11): error TS2322: Type 'string' is not assignable to type 'number'.
tluaNumericForErrors.tlua(7,14): error TS2322: Type 'boolean' is not assignable to type 'number'.
tluaNumericForErrors.tlua(10,18): error TS2322: Type 'string' is not assignable to type 'number'.
tluaNumericForErrors.tlua(17,13): error TS1005: ',' expected.
tluaNumericForErrors.tlua(23,10): error TS6133: 'tooMany' is declared but its value is never read.
tluaNumericForErrors.tlua(24,19): error TS100022: A Lua numeric for statement has at most three control expressions.
tluaNumericForErrors.tlua(30,10): error TS6133: 'badAnnotation' is declared but its value is never read.
tluaNumericForErrors.tlua(31,10): error TS2322: Type 'number' is not assignable to type 'string'.
tluaNumericForErrors.tlua(37,10): error TS6133: 'selfReference' is declared but its value is never read.
tluaNumericForErrors.tlua(38,11): error TS2448: Block-scoped variable 'i' used before its declaration.
tluaNumericForErrors.tlua(38,11): error TS2454: Variable 'i' is used before being assigned.
tluaNumericForErrors.tlua(44,10): error TS6133: 'unused' is declared but its value is never read.
tluaNumericForErrors.tlua(46,7): error TS6133: 'i' is declared but its value is never read.


==== tluaNumericForErrors.tlua (14 errors) ====
    // Non-number bounds and step.
    function badBounds(): void
             ~~~~~~~~~
!!! error TS6133: 'badBounds' is declared but its value is never read.
      for i = "a", 10 do
              ~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
        local n = i;
        n;
      end
      for i = 1, true do
                 ~~~~
!!! error TS2322: Type 'boolean' is not assignable to type 'number'.
        i;
      end
      for i = 1, 10, "step" do
                     ~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
        i;
      end
    end
    
    // Missing `to`.
    function missingTo(): void
      for i = 1 do
                ~~
!!! error TS1005: ',' expected.
        i;
      end
    end
    
    // More than three control expressions.
    function tooMany(): void
             ~~~~~~~
!!! error TS6133: 'tooMany' is declared but its value is never read.
      for i = 1, 10, 2, 3 do
                      ~
!!! error TS100022: A Lua numeric for statement has at most three control expressions.
        i;
      end
    end
    
    // An annotation that cannot hold a number.
    function badAnnotation(): void
             ~~~~~~~~~~~~~
!!! error TS6133: 'badAnnotation' is declared but its value is never read.
      for i: string = 1, 2 do
             ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
        i;
      end
    end
    
    // The control variable cannot be used in its own bounds.
    function selfReference(): void
             ~~~~~~~~~~~~~
!!! error TS6133: 'selfReference' is declared but its value is never read.
      for i = i, 10 do
              ~
!!! error TS2448: Block-scoped variable 'i' used before its declaration.
!!! related TS2728 tluaNumericForErrors.tlua:38:7: 'i' is declared here.
              ~
!!! error TS2454: Variable 'i' is used before being assigned.
        i;
      end
    end
    
    // Unused control variable; underscore is exempt.
    function unused(n: number): number
             ~~~~~~
!!! error TS6133: 'unused' is declared but its value is never read.
      local total = 0;
      for i = 1, n do
          ~
!!! error TS6133: 'i' is declared but its value is never read.
        total = total + 1;
      end
      for _ = 1, n do
        total = total + 1;
      end
      return total;
    end
    